@@ -1,3 +1,4 @@
+* Manage DatabaseDataError in ModelSQL
 * Remove support for pysqlite2
 * Do not import empty One2Many data
 * Deduplicate entries in domain inversion's simplify
